feat: test model에 status 추가
