# src/router.js
@@ -32,6 +32,7 @@ router.post('/api/v1/tests/push', testController.pushAlarm);
 router.post("/api/v1/tests", testController.createTest); // 검사 정보 추가
 router.get('/api/v1/tests',verify, testController.getTestList); // 검사 리스트 조회
 router.get('/api/v1/tests/search', verify, testController.getTestByPhoneAndName);
+router.put("/api/v1/tests/:testId", testController.updateTestStatus);
 router.get('/api/v1/tests/:testId',verify, testController.getTest); // 검사정보 조회
 router.delete('/api/v1/tests/:testId',verify, testController.deleteTest); // 검사정보 삭제
 
